--- a/MVC5Course/Views/Shared/_Layout.cshtml
+++ b/MVC5Course/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("測試頁面", "test", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
