--- a/MVC5Course/Views/Products/Index.cshtml
+++ b/MVC5Course/Views/Products/Index.cshtml
@@ -22,6 +22,9 @@
 
 @using (Html.BeginForm())
 {
+    <div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    </div>
     <table class="table">
         <tr>
             <th>V</th>
@@ -49,16 +52,20 @@
                 <td>
                     @Html.HiddenFor(modelItem => data[i].ProductId)
                     @Html.EditorFor(modelItem => data[i].ProductName)
+                    @Html.ValidationMessageFor(modelItem => data[i].ProductName, "", new { @class = "text-danger" })
                 </td>
                 <td>
                     @Html.EditorFor(modelItem => data[i].Price)
+                    @Html.ValidationMessageFor(modelItem => data[i].Price, "", new { @class = "text-danger" })
                 </td>
                 <td>
                     @Html.EditorFor(modelItem => data[i].Active)
+                    @Html.ValidationMessageFor(modelItem => data[i].Active, "", new { @class = "text-danger" })
                 </td>
 
                 <td>
                     @Html.EditorFor(modelItem => data[i].Stock)
+                    @Html.ValidationMessageFor(modelItem => data[i].Stock, "", new { @class = "text-danger" })
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = data[i].ProductId }) |
@@ -77,3 +84,6 @@
     </table>
 }
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
