--- a/MVC5Course/Models/fabrics.tt
+++ b/MVC5Course/Models/fabrics.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"fabrics.edmx";
+const string inputFile = @"Fabrics.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
