利用ajax.beginForm操作更新部份內容

--- a/MVC5Course/Views/Ajax/Index.cshtml
+++ b/MVC5Course/Views/Ajax/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<p>
-    @Ajax.ActionLink("取得時間", "gettime", new AjaxOptions { UpdateTargetId="Now",AllowCache })
+    @Ajax.ActionLink("取得時間", "gettime", new AjaxOptions { UpdateTargetId = "Now", AllowCache = false })
 
 </p>
 <div id="Now"></div>
