--- a/MVC5Course/Views/OrderLines/Index.cshtml
+++ b/MVC5Course/Views/OrderLines/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@model IEnumerable<MVC5Course.Models.OrderLine>
+@{
+    if (IsAjax)
+    {
+        Layout = "";
+    }
+}
 <h2>OrderLines</h2>
-@using (Html.BeginForm())
+@using (Ajax.BeginForm("Index", "OrderLines", new { productId = ViewBag.productId }, new AjaxOptions { UpdateTargetId = "Details" }))
 {
-    @Html.DropDownList("orderSatsus", null, "請選擇訂單狀態", new { onchange = "this.form.submit();" })
+    @Html.DropDownList("orderSatsus", null, "請選擇訂單狀態", new { onchange = "$(this.form).trigger('submit');" })
     <br>
-    @:ID： @Html.Id("id");<br/>
+    @:ID： @Html.Id("id");<br />
     @:Name： @Html.Name("名稱");<br />
     @:Value： @Html.Value("值");<br />
     <table class="table">
