新增ajax刪除功能 注意OrderStatusSelected、productId 這些都是由前端使用者抓回的參數
而OrderId、 LineNumber
則是列表item中的OrderLine的主鍵

--- a/MVC5Course/Views/OrderLines/Index.cshtml
+++ b/MVC5Course/Views/OrderLines/Index.cshtml
@@ -47,8 +47,20 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Ajax.ActionLink("Delete", "Delete",
+                    new
+                    {
+                        OrderId = item.OrderId,
+                        LineNumber = item.LineNumber,
+                        orderSatsus = ViewBag.OrderStatusSelected
+                    },
+                    new AjaxOptions
+                    {
+                        UpdateTargetId = "Details",
+                        HttpMethod = "Post"
+                    })
                 </td>
+
             </tr>
         }
     </table>
