--- a/MVC5Course/Views/Clients/Index.cshtml
+++ b/MVC5Course/Views/Clients/Index.cshtml
@@ -9,6 +9,10 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<form action="">
+    <input name="serach" type="text" />
+    <input type="submit" value="serach" />
+</form>
 <table class="table">
     <tr>
         <th>
