--- a/MVC5Course/Views/Shared/Error.cshtml
+++ b/MVC5Course/Views/Shared/Error.cshtml
@@ -1,9 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "錯誤";
+    ViewBag.Title = "錯誤1";
 }
 
 <h1 class="text-danger">錯誤。</h1>
 <h2 class="text-danger">處理您的要求時發生錯誤。</h2>
 
+<pre>@Model.Exception.ToString()</pre>
